# research-pipeline

./: .gitignore  .gitmodules  .zenodo.json  AGENTS.md  CITATION.cff  CLAUDE.md  CODE_REVIEW.md  CONTRIBUTING.md  EXPLORATORY_RESEARCH.md  FORMAT_FRICTION_EXPLORATORY_RESEARCH.md  LICENSE  LIMITATIONS.md  PAPER_EXPANSION_PLAN.md  PLAN.md  README.md  README_ZENODO.md  RESEARCH_PAPER.md  RESEARCH_PAPER_REVIEW.md  RESEARCH_REVIEW.md  RESULTS.md  REVIEW.md  backup.sh  pyproject.toml  requirements.txt
.env/: pyvenv.cfg
analysis/: audit.py  compare.py
backup/: FORMAT_FRICTION_RESEARCH_PLAN.md
calibration/: calibrate.py  sensitivity_analysis.json  thresholds.json
experiments/: analyze_judged_results.py  cli.py  compute_agreement.py  generate_validation_sample.py  judge_scoring.py  memory_tool_experiment.py  multi_model_evaluator.py  natural_language_intent_experiment.py  quick_recovery_test.py  remediation_analysis.py  run_analysis.py  runner.py  signal_detection_experiment.py  two_pass_extraction.py
paper/: EXPLORATORY_RESEARCH.md  FORMAT_FRICTION.md  LIMITATIONS.md  PREREGISTRATION.md  REVIEW.md  format_friction.md
pipeline/: __init__.py  __main__.py  adaptive.py  analysis.py  api.py  cli.py  evaluators.py  executor.py  interview.py  manuscript.py  models.py  multimodel.py  orchestrator.py  pdf_export.py  pilot.py  preregistration.py  replication.py  review.py  review_gates.py  runner.py  schemas.py  stats.py  utils.py  verification.py
scenarios/: generator.py
scripts/: create_zenodo_archive.sh  generate_pdf.sh  prepare_zenodo.sh  run_pipeline.sh  setup_env.sh  (+2 more)
(+992 files in other folders)
